<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/home"
        android:title="Home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Perfil"

        android:icon="@drawable/loginicon2"
        android:title="@string/Perfil"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Informate"

        android:icon="@mipmap/infoicon"
        android:title="@string/op1" />
    <item
        android:id="@+id/Tiendas"

        android:icon="@mipmap/tiendaicon"
        android:title="@string/op2"
        app:showAsAction="never" />


    <item
        android:id="@+id/Denunciar"
        android:title="@string/Denunciar"
        app:showAsAction="never" />

</menu>